framework/app-gateway/deploy/base/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: olares-app-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
