framework/app-gateway/deploy/base/namespace-os-framework.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: os-framework
  labels:
    app.kubernetes.io/name: os-framework
