framework/app-gateway/deploy/base/demo-meshed-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-client
  namespace: agw-demo
  labels:
    app: curl-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl-client
  template:
    metadata:
      labels:
        app: curl-client
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: curl
          image: curlimages/curl:8.5.0
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
