framework/app-gateway/deploy/base/demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-echo
  namespace: agw-demo
spec:
  parentRefs:
    - name: app-gateway
      namespace: os-framework
      sectionName: http
  hostnames:
    - demo.agw.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-echo
          port: 80
          weight: 1
